<resources>

    <string name="app_name">FitNYC</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="new_email_request">Email Address</string>
    <string name="new_password_request">Create Password</string>
    <string name="new_password_confirm_request">Confirm Password</string>
    <string name="new_fName_request">First Name</string>
    <string name="new_lName_request">Last Name</string>
    <string name="new_Name_request">Full Name</string>
    <string name="new_bday_request">Date of Birth</string>
    <string name="new_zip_request">Zipcode</string>
    <string name="submit_btn">submit</string>
    <string-array name="dob">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="skill">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Expert</item>
    </string-array>
    <string-array name="Sports">
        <item>Basketball</item>
        <item>Football</item>
        <item>Handball</item>
        <item>Swimming</item>
        <item>Soccer</item>
    </string-array>
    <string name="title_activity_basketball">BasketballActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_handball">HandballActivity</string>
    <string name="title_activity_parks">ParksActivity</string>
    <string name="toolbar">FIT NYC</string>
    <string name="dialog_message">Are you sure you want to delete your game ?</string>
    <string name="dialog_title">Delete Handball Game</string>
    <string name="No">No</string>
    <string name="Yes">yes</string>
</resources>
